--- a/client/src/pages/Product/Product.scss
+++ b/client/src/pages/Product/Product.scss
@@ -94,6 +94,11 @@
       gap: 10px;
       color: gray;
     }
+    .checkOut{
+      color: green;
+      font-weight: bold;
+      margin-top: 10px;
+    }
   }
 }
  
