--- a/client/src/components/slider/Slider.scss
+++ b/client/src/components/slider/Slider.scss
@@ -8,10 +8,10 @@
     display: flex;
     width: 300vw;
     height: 100%;
-    transition: all 0.7s ease;
+    transition:  0.7s all ease;
     img {
       min-width: 100vw;
-      height: 700px;
+      height: 660px;
       object-fit: cover;
     }
   }
