--- a/client/src/pages/Product/Product.scss
+++ b/client/src/pages/Product/Product.scss
@@ -3,6 +3,7 @@
   padding: 20px 50px;
   gap: 50px;
   .left {
+    flex: 1;
     display: flex;
     gap: 10px;
 
@@ -33,6 +34,7 @@
     }
   }
   .right {
+    flex: 1;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -46,8 +48,9 @@
       font-weight: 50;
     }
     p {
-      font-size: 18px;
+      font-size: 16px;
       font-weight: 300;
+      color: #605d5d;
       text-align: justify;
     }
     .quantity {
